Changes after 2.3 release:

- CPU
  - Fixed critical issue with 0x90 opcode (NOP) handling in x86-64 mode
  - Correctly detect inexact result by FPU
  - Do not save and restore XMM8-XMM15 registers when not in x86-64 mode
  - Several disasm and internal debugger fixes (again)

- General
  - 2nd simulation support in wxBochs now almost usable (simulation cleanup
    code added and memory leaks fixed)

- Configure and compile
  - several fixes for MacOSX, OpenBSD and Solaris 10
  - enable save/restore feature by default for all configurations
  - rename SSE4 option to match Intel(R) Programming Reference Manual
    to enable Intel Core Duo 2 new instructions use --enable-sse3e

- I/O devices (Volker)
  - initial support for the PIIX4 ACPI controller
  - hard disk emulation now supports ATA-6 (LBA48 addressing, UDMA modes)
  - VMWare version 4 disk image support added (patch by Sharvil Nanavati)
  - experimental USB device change support added

- Bochs internal debugger
  - fixed broken debugger "rc file" option (execute debugger command from file)
  - implementation of a gui frontend ("windebug") for win32 started
  - gdbstub now accepts connection from any host
  - several documentation updates

- Configuration interface
  - fixes and improvements to the save state dialog handling

- Display libraries
  - text mode color handling improved in some guis
  - win32 fullscreen mode (patch by John Comeau)

- System BIOS (Volker)
  - 32-bit PM BIOS init code for ACPI, PCI, SMP and SMM (initial patches by
    Fabrice Bellard)
  - PCI BIOS function "find class code" implemented

-------------------------------------------------------------------------
Changes in 2.3 (August 27, 2006):

Brief summary :
- limited save/restore support added (config + log options, hardware state)
- configuration parameter handling rewritten to a parameter tree
- lots of cpu and internal debugger fixes
- hard disk geometry autodetection now supported by most of the image types